--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name=”author” content=”SONG Sizhe”>
 </head>
 <body>
-This is sausage. :)
-This page is under construction.
+This is sausage. :)<br/>
+This page is under construction.<br/>
 See you.
 </body>
