--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name=”author” content=”SONG Sizhe”>
 </head>
 <body>
-This is sausage. :)<br/>
-This page is under construction.<br/>
+Hi, there! This is sausage. :)<br/>
+The page is still under construction.<br/>
+Click <a href="sausage-song.github.io/blog">here<a/> to go to my blog.<br/>
 See you in the future.
 </body>
