--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <body>
 Hi, there! This is sausage. :)<br/>
 The page is still under construction.<br/>
-Click <a href="sausage-song.github.io/blog">here<a/> to go to my blog.<br/>
+Click <a href="https://sausage-song.github.io/blog/">here<a/> to go to my blog.<br/>
 See you in the future.
 </body>
