--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
 Hi, there! This is sausage. :)<br/>
 The page is still under construction.<br/>
-Click <a href="https://sausage-song.github.io/blog/">here<a/> to go to my blog.<br/>
-See you in the future.
+See you in the future.<br/>
+<a href="https://sausage-song.github.io/blog/">My Blog<a/><br/>
+<a href="https://sausage-song.github.io/sauDrive/">SauDrive<a/>
 </body>
