--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </pre>
         </font>
     </div>
-<a href="https://Sausage-SONG.github.io/home/">Home<a/>
+<a href="https://Sausage-SONG.github.io/home/">Home<a/><br/>
 <a href="https://sausage-song.github.io/blog/">Blog<a/><br/>
-<a href="https://saudrive.sausage.workers.dev/">SauDrive<a/.
+<a href="https://saudrive.sausage.workers.dev/">SauDrive<a/>
 </body>
